--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   http: ^0.13.4
   auto_route: ^3.2.1
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.0.18
+  flutter_widget_from_html: ^0.8.4
 
   flutter_web_plugins:
     sdk: flutter
