--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   auto_route_generator: ^3.2.1
+  flutter_launcher_icons: ^0.9.0
   build_runner:
+
+flutter_icons:
+  image_path: "assets/images/ic_app_icon.jpeg"
+  android: true
+  ios: true
 
 flutter:
 
