--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.15.1 <3.0.0"
+  sdk: ">=2.18.6 <3.0.0"
 
 dependencies:
   flutter:
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   url_launcher: ^6.0.18
   flutter_widget_from_html: ^0.8.4
+  webfeed: ^0.7.0
+  shared_preferences: ^2.0.13
 
   flutter_web_plugins:
     sdk: flutter
